2012-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure: Update to Autoconf 2.69.

	* magick/effect.c (MotionBlurImage): Motion blur does scale so
	remove DisableSlowOpenMP for it.

	* magick/command.c (BenchmarkImageCommand): Remove parenthesis
	from output, and change "iter/sec cpu" to "iter/cpu" to ease
	parsing.

	* magick/pixel_cache.c (GetPixelCacheInCore): Consider read-only
	memory-mapped cache as being "in-core".  Otherwise MPC input files
	are penalized.

2012-05-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/api.h: Include <sys/types.h> on POSIX systems in order to
	help assure that 'size_t' and 'ssize_t' are declared.

2012-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick_config_api.h.in: Need to provide definitions for
	'size_t' and 'ssize_t' in case the system headers lack these types
	because the definition of MagickExtentImage() requires them.  This
	should resolve PHP bug #62034 "gmagick does not compile".

2012-05-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_iterator.c (GetRegionThreads): Don't thread region
	if it is not memory-based.

2012-05-09  Glenn Randers-Pehrson  <glennrp@simplesystems.org> 

	* coders/png.c (ReadOnePNGImage): make transparent_color elements
	unsigned long instead of unsigned short, so 65537 is actually out of
	range as expected, and won't match any pixel if no tRNS chunk is
	present.

2012-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sfw.c (ReadSFWImage): Reader needs to be more robust
	against corrupt or maligned headers.  Resolves SourceForge issue
	"sfw file crash".

2012-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (WritePDFImage): Add file basename as the PDF
	document title.  Resolves SourceForge bug ID 2835140
	"GraphicsMagick fails to add title attribute to PDF output".

	* coders/sfw.c (ReadSFWImage): Restore original filename and
	format.
